# quant-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.minimal.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_backtest.py  test_in_container.sh  test_integration.py  test_ml.py  test_mock.py  test_signal_synthesis.py  test_strategy.py  test_strategy_v2.py
config/: default.yaml  production.yaml
docs/: 2026-03-11-复盘.md  FACTORS.md  USAGE_GUIDE.md  USER_GUIDE.md  architecture_design.md  data_management_phase1.md  strategy_layer_design.md  ui_layer_design.md
quant_assistant/: __init__.py  api.py  cli.py
quant_assistant/backtest/: __init__.py  broker.py  describe.md  engine.py  realistic_broker.py
quant_assistant/core/: __init__.py  interfaces.py
quant_assistant/data/: __init__.py
quant_assistant/data/fetcher/: efinance_fetcher.py
quant_assistant/factors/: __init__.py  composite.py  engine.py  engine_v2.py  technical.py
quant_assistant/ml/: __init__.py  evaluation.py  features.py  predictor.py
quant_assistant/risk/: __init__.py
quant_assistant/strategy/: optimizer.py
quant_assistant/strategy/examples/: ma_strategy.py  macd_strategy.py
quant_assistant/strategy/factors/: composite.py  registry.py  technical.py  technical_extended.py
quant_assistant/strategy/ml/: evaluation.py  features.py  models.py
quant_assistant/strategy/signal_synthesis/: signal_generator.py  stock_selector.py  strategy_builder.py
quant_assistant/visualization/: cli.py
quant_assistant/visualization/adapters/: data_adapter.py
quant_assistant/visualization/indicators/: __init__.py  engine.py  macd.py  moving_average.py
src/: __init__.py  bootstrap.py  config.py  config_manager.py
src/backtest/: __init__.py  engine.py  performance.py  portfolio.py  vectorized_engine.py  visualization.py
src/core/: __init__.py  container.py  context.py  describe.md  events.py  exceptions.py
src/data/: __init__.py  cache.py  describe.md
src/risk/: manager.py
src/strategy/: __init__.py  base.py  composite.py  describe.md
src/utils/: __init__.py  config.py  describe.md  logger.py
src/visualization/: __init__.py  describe.md
(+28 files in other folders)
